# data-ingestion

./: .gitignore  README.md  pyproject.toml
data_ingestion/: data_ingestion.py  ddl_lifter_iceberg.sql  ddl_v_lifter.sql  ddl_v_lifter_iceberg_delta.sql  insert_into_lifter_iceberg.sql  steps.md
