[tool.poetry]
name = "data-ingestion"
version = "0.1.0"
description = ""
authors = ["Travis Douglas <tedward27@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
awswrangler = "^3.10.0"
requests = "^2.32.3"
pandas = "^2.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"